[package]
name = "pn532"
description = "PN532 protocol implementation"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/WMT-GmbH/pn532"
license = "MIT OR Apache-2.0"
categories = [
    "hardware-support",
    "no-std",
    "asynchronous",
    "embedded"
]
keywords = [
    "embedded-hal",
    "PN532",
]

[dependencies]
embedded-hal = { version = "1.0.0" }
embassy-time = { version = "0.3.2" }

nb = { version = "1.0.0" }
serialport = { version = "4.0.1", optional = true }

embedded-hal-async = { version = "1.0.0" }
maybe-async = { version = "0.2.10" }

[features]
msb-spi = []
std = ["serialport"]
is_sync = ["maybe-async/is_sync"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "hsu-test-util"
required-features = ["std"]

[dev-dependencies]
# hsu-test-serialport
log = "0.4"
env_logger = "0.7"
clap = "2.33.3"
