[package]
name = "pn532"
description = "PN532 protocol implementation"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/WMT-GmbH/pn532"
license = "MIT OR Apache-2.0"
categories = [
    "hardware-support",
    "no-std",
    "asynchronous",
    "embedded"
]
keywords = [
    "embedded-hal",
    "PN532",
]

[dependencies]
embedded-hal = { version = "1.0.0" }
nb = "1.1.0"
serialport = { version = "4.0.1", optional = true }

[features]
msb-spi = []
serialport = ["dep:serialport", "std"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "hsu-test-util"
required-features = ["std"]

[dev-dependencies]
embedded-hal-mock = "0.11.1"

# hsu-test-util
env_logger = "0.7"
clap = "2.33.3"
